# example-axum-seaorm

./: Cargo.toml  Dockerfile  README.md  curl.md  docker-compose.yml
src/: lib.rs  main.rs
src/abstract_trait/: category.rs  file.rs  post.rs
src/config/: hashing.rs  mod.rs
src/domain/: mod.rs
src/domain/request/: auth.rs  category.rs  comment.rs  post.rs  user.rs
src/domain/response/: category.rs  comment.rs  file.rs  mod.rs  post.rs  user.rs
src/entities/: mod.rs
src/handler/: auth.rs  category.rs  comments.rs  mod.rs  posts.rs  user.rs
src/repository/: category.rs  comment.rs  posts.rs  user.rs
src/service/: category.rs  file.rs  posts.rs
src/utils/: di.rs
