[package]
name = "example-seaorm-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
sea-orm = { version = "1.1.0", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
] }
sea-orm-migration = "1.1.0"


serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

async-trait = "0.1.83"

thiserror = "1.0.66"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"

axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["cors"] }

[dev-dependencies]
sea-orm-migration = "1.1.0"