[package]
name = "example-seaorm-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
sea-orm-migration = "1.1.0"


serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

async-trait = "0.1.83"

thiserror = "2.0.11"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

bcrypt = "0.17.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"

axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
uuid = { version = "1.11.1", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["limit", "trace", "fs"] }
mockall = "0.13.0"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
sea-orm-migration = "1.1.0"
